--- a/index.html
+++ b/index.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>-- Created by @ ytz_solar on Discord
--- Dont forget to join https://discord.gg/3SdU5hsAyJ
-</title>
+    <title>Zumix Executor</title>
     <link rel="shortcut icon" href="logo.png">
     <style>
         body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #1E6C93;
+            color: #ffffff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            transition: background-color 0.3s ease;
+        }
+        h1 {
+            margin-bottom: 20px;
+            font-size: 2.5em;
+            text-align: center;
+        }
+        p {
+            margin: 10px 0;
+            font-size: 1.2em;
+            text-align: center;
+            max-width: 600px;
+        }
+        .discord-button {
+            padding: 15px 30px;
+            background-color: #000000;
+            color: #ffffff;
+            margin-top: 15px;
+            border: none;
+            border-radius: 30px;
+            cursor: pointer;
+            font-size: 1.2em;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            text-decoration: none;
+        }
+        .discord-button:hover {
+            background-color: #1E6C93;
+            transform: scale(2.05);
+        }
+    </style>
+</head>
+<body>
+    <h1>Pluto Executor</h1>
+    <p>Elevate your Roblox experience with our cutting-edge executor, designed for flawless performance and unparalleled functionality. Unlock limitless possibilities and enhance your gameplay with precision and ease.</p>
+    <p>Join our Discord Server to experience our community or if you need support with out executor. We publish our  updates, and more! Join today!</p>
+    <a href="discord.gg/3SdU5hsAyJ" class="discord-button">Join the Discord Server</a>
+</head>
+<body>
+    <h1>Pluto Executor Download</h1> 
