--- a/index.html
+++ b/index.html
@@ -41,17 +41,9 @@
             transition: background-color 0.3s ease, transform 0.2s ease;
             text-decoration: none;
         }
-        .discord-button:hover {
-            background-color: #1E6C93;
-            transform: scale(2.05);
-        }
     </style>
 </head>
 <body>
-    <h1>Pluto Executor</h1>
-    <p>Elevate your Roblox experience with our cutting-edge executor, designed for flawless performance and unparalleled functionality. Unlock limitless possibilities and enhance your gameplay with precision and ease.</p>
-    <p>Join our Discord Server to experience our community or if you need support with out executor. We publish our  updates, and more! Join today!</p>
-    <a href="discord.gg/3SdU5hsAyJ" class="discord-button">Join the Discord Server</a>
+    <p>Created by @ ytz_solar on Discord
+-- Dont forget to join https://discord.gg/3SdU5hsAyJ</p>
 </head>
-<body>
-    <h1>Pluto Executor Download</h1> 
