--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #1E6C93;
-            color: #ffffff;
+            background-color: #D3D3D3; /* Gray background */
+            color: #000000;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -41,9 +41,44 @@
             transition: background-color 0.3s ease, transform 0.2s ease;
             text-decoration: none;
         }
+        /* Styling for the code area with line numbers */
+        pre {
+            background-color: #2d2d2d;
+            color: #f8f8f2;
+            padding: 20px;
+            overflow: auto;
+            border-radius: 5px;
+            position: relative;
+            max-width: 600px;
+        }
+        pre code {
+            display: block;
+            white-space: pre-wrap;
+            counter-reset: line;
+        }
+        pre code span {
+            display: block;
+            position: relative;
+            padding-left: 40px;
+            margin-left: 10px;
+        }
+        pre code span::before {
+            counter-increment: line;
+            content: counter(line);
+            position: absolute;
+            left: 0;
+            color: #888888;
+            font-size: 0.9em;
+            padding-right: 10px;
+            text-align: right;
+        }
     </style>
 </head>
 <body>
-    <p>Created by @ ytz_solar on Discord
--- Dont forget to join https://discord.gg/3SdU5hsAyJ</p>
-</head>
+    <h1>Zumix Executor</h1>
+    <pre><code>
+<span>Created by @ ytz_solar on Discord</span>
+<span>-- Don't forget to join https://discord.gg/3SdU5hsAyJ</span>
+    </code></pre>
+</body>
+</html>
