--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
     </style>
 </head>
 <body>
-    <pre><code>
+    <!-- Editable section with contenteditable attribute -->
+    <pre contenteditable="true"><code>
 <span>Created by @ ytz_solar on Discord</span>
+<span>-- Don't forget to join https://discord.gg/3SdU5hsAyJ</span>
+<span>Some additional text to show how wrapping and lines work.</span>
+<span>This line is very long, so it should wrap around to the next line in most browser window sizes, and the line numbers will adjust accordingly.</span>
     </code></pre>
 </body>
 </html>
