--- a/index.html
+++ b/index.html
@@ -3,58 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logo.png">
+    <title>Monaco Editor Integration</title>
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #D3D3D3; /* Gray background */
-            color: #000000;
+            height: 100vh;
             display: flex;
             justify-content: center;
-            align-items: flex-start;
-            height: 100vh;
+            align-items: center;
         }
-        /* Fullscreen pre box */
-        pre {
-            background-color: #2d2d2d;
-            color: #f8f8f2;
-            padding: 20px;
-            overflow: auto;
-            border-radius: 5px;
+        #editor-container {
             width: 100%;
             height: 100%;
             margin: 0;
-            box-sizing: border-box;
-        }
-        pre code {
-            display: block;
-            white-space: pre-wrap; /* Allow text wrapping */
-            counter-reset: line;
-        }
-        pre code span {
-            display: block;
-            position: relative;
-            padding-left: 40px;
-            margin-left: 10px;
-        }
-        pre code span::before {
-            counter-increment: line;
-            content: counter(line); /* Line number */
-            position: absolute;
-            left: 0;
-            color: #888888;
-            font-size: 0.9em;
-            padding-right: 10px;
-            text-align: right;
+            padding: 0;
         }
     </style>
 </head>
 <body>
-    <!-- Editable section with contenteditable attribute -->
-    <pre contenteditable="true"><code>
-<span>Created by @ ytz_solar on Discord</span>
-<span>-- Don't forget to join https://discord.gg/3SdU5hsAyJ</span>
-    </code></pre>
+
+<!-- Editor container -->
+<div id="editor-container"></div>
+
+<!-- Monaco Editor Loader Script -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.42.0/min/vs/loader.min.js"></script>
+
+<script>
+    // Configure Monaco to load
+    require.config({ paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.42.0/min/vs' }});
+
+    // Load the editor
+    require(['vs/editor/editor.main'], function() {
+        monaco.editor.create(document.getElementById('editor-container'), {
+            value: [
+                'Created by @ ytz_solar on Discord',
+                '-- Don\'t forget to join https://discord.gg/3SdU5hsAyJ',
+            ].join('\n'),
+            language: 'plaintext',  // You can use other languages like 'javascript', 'html', etc.
+            theme: 'vs-dark',       // Use 'vs-light' for light theme
+            automaticLayout: true   // Ensure the editor resizes with the container
+        });
+    });
+</script>
+
 </body>
 </html>
