--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monaco Editor Integration</title>
+    <title>Monaco Editor</title>
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #D3D3D3; /* Gray background */
+            padding: 0;
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -17,36 +16,32 @@
         #editor-container {
             width: 100%;
             height: 100%;
-            margin: 0;
-            padding: 0;
         }
     </style>
 </head>
 <body>
+    <!-- Editor container -->
+    <div id="editor-container"></div>
 
-<!-- Editor container -->
-<div id="editor-container"></div>
+    <!-- Monaco Editor Loader Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.42.0/min/vs/loader.min.js"></script>
 
-<!-- Monaco Editor Loader Script -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.42.0/min/vs/loader.min.js"></script>
+    <script>
+        // Configure Monaco to load
+        require.config({ paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.42.0/min/vs' }});
 
-<script>
-    // Configure Monaco to load
-    require.config({ paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.42.0/min/vs' }});
-
-    // Load the editor
-    require(['vs/editor/editor.main'], function() {
-        monaco.editor.create(document.getElementById('editor-container'), {
-            value: [
-                'Created by @ ytz_solar on Discord',
-                '-- Don\'t forget to join https://discord.gg/3SdU5hsAyJ',
-            ].join('\n'),
-            language: 'plaintext',  // You can use other languages like 'javascript', 'html', etc.
-            theme: 'vs-dark',       // Use 'vs-light' for light theme
-            automaticLayout: true   // Ensure the editor resizes with the container
+        // Load the editor
+        require(['vs/editor/editor.main'], function() {
+            monaco.editor.create(document.getElementById('editor-container'), {
+                value: [
+                    '--Created by @ ytz_solar on Discord',
+                    '-- Don\'t forget to join https://discord.gg/3SdU5hsAyJ'
+                ].join('\n'),
+                language: 'plaintext', // Set to 'plaintext' since this is general text
+                theme: 'vs-dark',      // Set dark theme
+                automaticLayout: true  // Enable auto-resizing of the editor
+            });
         });
-    });
-</script>
-
+    </script>
 </body>
 </html>
